add: integração do cadastro | fix: corrige geração de docs do swagger
